# py_web_module_11_fastapi

./: .gitignore  README.md  pyproject.toml
fast_app/: app2_pydantic.py  app3.py  app4.py  main.py
