[tool.poetry]
name = "py-web-module-11-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
